Bintray-travis integration attempt 4

--- a/build.gradle
+++ b/build.gradle
@@ -53,9 +53,11 @@ publishing {
     }
 }
 
+println("!!! user: ${bintrayUser}")
+
 bintray {
-    user = user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    user = user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('bintrayUser')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('bintrayApiKey')
     publications = ['unito']
     pkg {
         repo = 'maven'
