--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 group = 'bynull.unito'
-version = '1.0.11'
+version = '1.0.12'
 
 repositories {
     jcenter()
@@ -18,8 +18,8 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'ch.qos.logback:logback-classic:1.1.7'
+    //compile 'org.slf4j:slf4j-api:1.7.21'
+    //compile 'ch.qos.logback:logback-classic:1.1.7'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
